--- a/lectures/lecture1.ipynb
+++ b/lectures/lecture1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "53c87a0f",
+   "id": "2c7298d3",
    "metadata": {},
    "source": [
     "# Lecture 0: Course Introduction\n",
@@ -11,14 +11,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "784dfdf7",
+   "id": "64b43b00",
    "metadata": {},
    "source": [
     "## Teaching squad\n",
     "### Instructor\n",
     "![](img/l1.png)\n",
     "- I am Gittu George, Ph.D\n",
-    "- I am a Postdoctoral Teaching & Learning Fellow.\n",
+    "- I am a Postdoctoral Fellow.\n",
     "- Email Me: ggeorg02@cs.ubc.ca\n",
     "- Office Hours: Tue 2 -3 pm\n",
     "- Research interests are at the intersection of computer science and genomics.\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8701a3e",
+   "id": "d2905962",
    "metadata": {},
    "source": [
     "## Todays Agenda\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c9fac76",
+   "id": "9ed2fbcb",
    "metadata": {},
    "source": [
     "## Course Overview\n",
@@ -94,9 +94,9 @@
     "\n",
     "```\n",
     "\n",
-    "### Individual Assignments (60 %)\n",
+    "### Individual Assignments (50 %)\n",
     "\n",
-    "#### Assignment 1 (20 %)\n",
+    "#### Assignment 1 (16 %)\n",
     "\n",
     "```{sidebar} Let's checkout some tweets!!\n",
     "```{figure} img/l3.png\n",
@@ -114,7 +114,7 @@
     "- Use Python & Jupyter\n",
     "- Get code to download data directly from an FTP\n",
     "\n",
-    "#### Assignment 2 (20 %)\n",
+    "#### Assignment 2 (17 %)\n",
     "\n",
     "Data Pipelines in Jupyter/Postgres\n",
     "- Connect to a database\n",
@@ -123,7 +123,7 @@
     "\n",
     "<img src='img/l4.png' >\n",
     "\n",
-    "#### Assignment 3 (20 %)\n",
+    "#### Assignment 3 (17 %)\n",
     "\n",
     "Six Degrees of Sampling\n",
     "- An introduction to graph databases using the initial Twitter data\n",
@@ -133,9 +133,10 @@
     "### Group Assignments (40 %)\n",
     "\n",
     "There will 5 students in a randomly assigned group. Checkout [this](https://canvas.ubc.ca/courses/89141/discussion_topics/1258994) to find your group.\n",
-    "- Ask the question (10 %)\n",
+    "- Ask the question (5 %)\n",
     "- Find the data (Jupyter & data dictionary) (10 %)\n",
-    "- Presentation and reproducible Jupyter workbook (10 %)\n",
+    "- Presentation and reproducible Jupyter workbook (20 %)\n",
+    "- Team work reflection (5%)\n",
     "\n",
     "```{figure} img/ready.png\n",
     "---\n",
