--- a/lectures/lecture2.ipynb
+++ b/lectures/lecture2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "35a9a4a5",
+   "id": "7714bd1e",
    "metadata": {},
    "source": [
     "# Lecture 1: Data Management in a Big Data Environment\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5271ac81",
+   "id": "307b04d6",
    "metadata": {},
    "source": [
     "## Learning objectives\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f228b789",
+   "id": "d0c58017",
    "metadata": {},
    "source": [
     "## 4 Vs of Big Data\n",
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8bac72e",
+   "id": "f90a37c8",
    "metadata": {},
    "source": [
     "## General Framework for Big Data Analysis\n",
@@ -326,21 +326,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "575ee706",
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8ed588e2",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "```\n",
     "import pytest\n",
     "data = [1,2,3]\n",
     "data_out = sum(data)\n",
-    "assert data_out == 6, \"Sum isn’t working.\"\n",
-    "```"
+    "assert data_out == 6, \"Sum isn’t working.\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5d33dcfb",
+   "id": "174ada6c",
    "metadata": {},
    "source": [
     "Finally, let's talk about the dangers of too much data!!!! Checkout [this](https://www.forbes.com/sites/kimberlywhitler/2018/03/17/why-too-much-data-is-a-problem-and-how-to-prevent-it/?sh=2854371a755f) article."
