--- a/lectures/lecture2.ipynb
+++ b/lectures/lecture2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7714bd1e",
+   "id": "641613eb",
    "metadata": {},
    "source": [
     "# Lecture 1: Data Management in a Big Data Environment\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "307b04d6",
+   "id": "070d059b",
    "metadata": {},
    "source": [
     "## Learning objectives\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0c58017",
+   "id": "5e48a9e1",
    "metadata": {},
    "source": [
     "## 4 Vs of Big Data\n",
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f90a37c8",
+   "id": "559376c7",
    "metadata": {},
    "source": [
     "## General Framework for Big Data Analysis\n",
@@ -299,6 +299,8 @@
     "- How might these biases affect our analysis?\n",
     "  - Spurious correlations\n",
     "\n",
+    "<img src = 'img/chart.png'>\n",
+    "\n",
     "### Turn assumptions into assertions & tests\n",
     "Use the right tools!\n",
     "\n",
@@ -328,11 +330,10 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8ed588e2",
+   "id": "df61239a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pytest\n",
     "data = [1,2,3]\n",
     "data_out = sum(data)\n",
     "assert data_out == 6, \"Sum isn’t working.\""
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "174ada6c",
+   "id": "2c0a2b77",
    "metadata": {},
    "source": [
     "Finally, let's talk about the dangers of too much data!!!! Checkout [this](https://www.forbes.com/sites/kimberlywhitler/2018/03/17/why-too-much-data-is-a-problem-and-how-to-prevent-it/?sh=2854371a755f) article."
